--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
   margin: 0;
   padding: 0;
@@ -112,7 +111,6 @@ header.banner {
 }
 
 #course-content p {
-  font-family: Arial, Helvetica, sans-serif; /* Uniformizado com body */
   font-size: 1.2rem;
   max-width: 900px;
   margin-bottom: 30px;
@@ -159,7 +157,7 @@ header.banner {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content:left; /* Centralizado de forma responsiva */
+  justify-content:left; 
   text-align: left;
   padding: 250px;
 }
